cabal-version: 3.4
name: deep-map
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: BSD-3-Clause
author: Melanie Brown
maintainer: brown.m@pm.me
tested-with:
  GHC ^>= 9.2
  , GHC ^>= 9.0
  , GHC ^>= 8.10
  , GHC ^>= 8.8
  , GHC ^>= 8.6

library
    hs-source-dirs:
      src
    build-depends:
      base >= 4.11 && < 5
      , containers == 0.6.*
      , indexed-traversable == 0.1.2
    exposed-modules:
      Data.Map.Deep
    default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
    ghc-options: -O2 -Wall
    default-language:
      Haskell2010
