cabal-version:      3.0
name:               deep-map
version:            0.3.2
category:           Data, Statistics
synopsis:           Deeply-nested, multiple key type maps.
description:
  Please see the README at https://github.com/mixphix/deep-map

homepage:           https://github.com/mixphix/deep-map
bug-reports:        https://github.com/mixphix/deep-map/issues
license:            BSD-3-Clause
copyright:          2021-2024 Melanie Brown
author:             Melanie Brown
maintainer:         brown.m@pm.me
extra-source-files:
  CHANGELOG.md
  README.md

common extensions
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    TypeFamilies
    ViewPatterns

  ghc-options:        -O2 -Wall
  default-language:   GHC2021

library
  import:          extensions
  hs-source-dirs:  src
  build-depends:
    , base                 >=4.11   && <5
    , containers           >=0.5.11 && <0.9
    , indexed-traversable  ^>=0.1.2
    , witherable           >=0.5

  exposed-modules: Data.Map.Deep
